update menu links

--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ links:
   # - title: "Home"
   #   url: /
   - title: "Under the Surface"
-    url: /Under-the-Surface
+    url: /under-the-surface
   - title: "The Chase"
-    url: /The-Chase
+    url: /the-chase
   - title: "Spark"
-    url: /Spark
+    url: /spark
   - title: "Others"
-    url: /Others
+    url: /others
