--- a/_config.yml
+++ b/_config.yml
@@ -20,5 +20,7 @@ links:
     url: /the-chase
   - title: "Spark"
     url: /spark
-  - title: "Others"
-    url: /others
+  - title: "Other songs"
+    url: /other
+  - title: "About"
+    url: /About
