add new album when the morning comes to menu

--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,8 @@ links:
     url: /the-chase
   - title: "Spark"
     url: /spark
+  - title: "When The Morning Comes"
+    url: /when-the-morning-comes
   - title: "Other songs"
     url: /other
   - title: "About"
