--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
 title: "Marit Larsen lyrics"
-description: "A unofficial collection of the lyrics that Marit Larsen has sung."
+description: "An unofficial collection of the lyrics that Marit Larsen has sung."
 baseurl: ""
 url: "http://lyrics.maritlarsen.ml"
 
